<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/gradient_bg">

<!--    android:screenOrientation="portrait"-->



    <ScrollView android:id="@+id/mainContainer" android:layout_width="match_parent"
        android:layout_height="match_parent" android:visibility="visible">
        <LinearLayout android:id="@+id/addressContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity= "left"
                android:layout_margin="10dp"
                android:text="@string/home_button" />


            <TextView android:id="@+id/tvResult" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="16sp"
                android:textColor="@android:color/white"
                android:text="Find the Weather of a City"/>

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="Enter City Name"
                android:inputType="textPersonName"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:minHeight="48dp"></EditText>

            <Button
                android:id="@+id/btnGet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#0070c7"
                android:backgroundTint="@null"
                android:onClick="getWeatherDetails"
                android:text="Get Info"
                android:textColor="@android:color/white" />

            <TextView android:id="@+id/tvLocation" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="24dp"
                android:textColor="@android:color/white"
                android:text="Where Do You Want?"/>
            <TextView android:id="@+id/tvDate" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="14sp"
                android:textColor="@android:color/white"
                android:text="xxxx-xx-xx"/>
<!--        </LinearLayout>-->


<!--        <LinearLayout-->
<!--            android:id="@+id/overviewContainer"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:orientation="vertical">-->

            <!--            <TextView android:id="@+id/status" android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content" android:textSize="18dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:textColor="@android:color/white"-->
            <!--                android:text="Clear Sky"/>-->
<!--            <TextView-->
<!--                android:id="@+id/temp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:fontFamily="sans-serif-thin"-->
<!--                android:text="29°C"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="90dp" />-->


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/sunrise"
                android:padding="8dp"
                app:tint="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Longitude: --"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:textColor="@android:color/white" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Latitude: --"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvPrecipitationSum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/white" />
            </LinearLayout>


<!--            /////////bottom //////////////////-->


            <LinearLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal" android:weightSum="3">
                    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                        android:orientation="vertical" android:layout_weight="1"
                        android:gravity="center" android:padding="8dp"
                        android:background="#3CF1EBF1">
                        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                            android:src="@drawable/sunrise" app:tint="#FFFFFF"/>
                        <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:textSize="12sp" android:text="Sunrise"/>
                        <TextView android:id="@+id/tvSunrise" android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="14sp"
                            android:text="--"/>
                    </LinearLayout>
                    <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                        android:orientation="vertical" android:layout_weight="1"
                        android:gravity="center" android:padding="8dp"
                        android:background="#3CF1EBF1">
                        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                            android:src="@drawable/sunset" app:tint="#FFFFFF"/>
                        <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:textSize="12sp" android:text="Sunset"/>
                        <TextView android:id="@+id/tvSunset" android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="14sp"
                            android:text="--"/>
                    </LinearLayout>
                    <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                        android:orientation="vertical" android:layout_weight="1"
                        android:gravity="center" android:padding="8dp"
                        android:background="#3CF1EBF1">
                        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                            android:src="@drawable/rain" app:tint="#FFFFFF"/>
                        <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:textSize="12sp" android:text="Rain Sum"/>
                        <TextView android:id="@+id/tvRainSum" android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="14sp"
                            android:text="--"/>
                    </LinearLayout>
                </LinearLayout>

                <Space android:layout_width="wrap_content" android:layout_height="10dp"/>

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal" android:weightSum="3">
                    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                        android:orientation="vertical" android:layout_weight="1"
                        android:gravity="center" android:padding="8dp"
                        android:background="#3CF1EBF1">
                        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                            android:src="@drawable/maxtemp" app:tint="#FFFFFF"/>
                        <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:textSize="12sp" android:text="Max Temp"/>
                        <TextView android:id="@+id/tvMaxTemp" android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="14sp"
                            android:text="--"/>
                    </LinearLayout>
                    <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                        android:orientation="vertical" android:layout_weight="1"
                        android:gravity="center" android:padding="8dp"
                        android:background="#3CF1EBF1">
                        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                            android:src="@drawable/mintemp" app:tint="#FFFFFF"/>
                        <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:textSize="12sp" android:text="Min Temp"/>
                        <TextView android:id="@+id/tvMinTemp" android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="14sp"
                            android:text="--"/>
                    </LinearLayout>
                    <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                        android:orientation="vertical" android:layout_weight="1"
                        android:gravity="center" android:padding="8dp"
                        android:background="#3CF1EBF1">
                        <ImageView android:layout_width="25dp" android:layout_height="25dp"
                            android:src="@drawable/snow" app:tint="#FFFFFF"/>
                        <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:textSize="12sp" android:text="Snow Fall Sum"/>
                        <TextView android:id="@+id/tvSnowfallSum" android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="14sp"
                            android:text="--"/>
                    </LinearLayout>
                </LinearLayout>
        </LinearLayout>


        </LinearLayout>
    </ScrollView>


<!--    <ProgressBar android:id="@+id/loader" android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content" android:layout_centerInParent="true"-->
<!--        android:visibility="gone"/>-->

<!--    <TextView android:id="@+id/errorText" android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content" android:layout_centerInParent="true"-->
<!--        android:visibility="gone" android:text="Something went wrong"/>-->


</RelativeLayout>